# plugins

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  dprint.jsonc  justfile  lefthook.yml  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vitest.config.ts
.agents/plugins/: marketplace.json
.claude/: settings.json
.claude-plugin/: marketplace.json
.github/workflows/: distribute-skills.yml
docs/: tutorial.md
methodology/: CLAUDE.md
methodology/research/: skill-invocation.md  typescript-testing.md
methodology/skills/: skill-structure.md
methodology/testing/: testing-foundation.md  testing-naming.md  testing-router.md
outcomeeng/scripts/: build_plugins.py  distribute_skills.py  fix_xml_spacing.py  preserve_codex_plugin_cache.py  sync_exclude.py  validate_install.py  validate_plugins.py  validate_skill_frontmatter.py
outcomeeng_testing/generators/: directives.py  source_tree.py
outcomeeng_testing/harnesses/: dist_tree.py  scenarios.py  src_tree.py
plugins/claude/.claude-plugin/: plugin.json
plugins/core/.claude-plugin/: plugin.json
plugins/core/commands/: pickup.md
plugins/develop/.claude-plugin/: plugin.json
plugins/develop/.codex-plugin/: plugin.json
plugins/develop/agents/: command-auditor.md  skill-auditor.md  subagent-auditor.md
plugins/frontend/.claude-plugin/: plugin.json
plugins/frontend/.codex-plugin/: plugin.json
plugins/hdl/.claude-plugin/: plugin.json
plugins/hdl/.codex-plugin/: plugin.json
plugins/legacy/.claude-plugin/: plugin.json
plugins/legacy/commands/: pickup.md
plugins/prose/.claude-plugin/: plugin.json
plugins/prose/.codex-plugin/: plugin.json
plugins/python/.claude-plugin/: plugin.json
plugins/python/.codex-plugin/: plugin.json
plugins/python/agents/: architecture-auditor.md  code-auditor.md  python-architecture-auditor.md  python-code-auditor.md  python-test-auditor.md  test-auditor.md
plugins/rust/.claude-plugin/: plugin.json
plugins/rust/.codex-plugin/: plugin.json
plugins/rust/agents/: rust-architecture-auditor.md  rust-code-auditor.md  rust-simplifier.md  rust-test-auditor.md  rust-unsafe-auditor.md
plugins/spec-tree/.claude-plugin/: plugin.json
plugins/spec-tree/.codex-plugin/: plugin.json
plugins/spec-tree/agents/: applier.md  pdr-auditor.md  test-evidence-auditor.md
plugins/spec-tree/commands/: apply.md  commit.md  handoff.md  pickup.md  realize.md  release.md  rtfm.md
plugins/spec-tree/hooks/: hooks.json
plugins/specs/.claude-plugin/: plugin.json
plugins/spx-legacy/.claude-plugin/: plugin.json
plugins/spx/.claude-plugin/: plugin.json
plugins/test/.claude-plugin/: plugin.json
plugins/typescript/.claude-plugin/: plugin.json
plugins/typescript/.codex-plugin/: plugin.json
plugins/typescript/agents/: architecture-auditor.md  code-auditor.md  test-auditor.md  typescript-architecture-auditor.md  typescript-code-auditor.md  typescript-simplifier.md  typescript-test-auditor.md
plugins/visual/.claude-plugin/: plugin.json
plugins/visual/.codex-plugin/: plugin.json
scripts/: distribution.yml  fix-xml-spacing.py  validate-skill-frontmatter.py
specs/: CLAUDE.md
spx/: 15-audit-verdict-format.pdr.md  15-spec-coverage.adr.md  15-test-language.adr.md  AGENTS.md  CLAUDE.md  EXCLUDE  claude.product.md  outcomeeng.product.md
spx/13-infrastructure.enabler/: infrastructure.md
spx/13-infrastructure.enabler/21-test-infrastructure.enabler/: test-infrastructure.md
spx/13-infrastructure.enabler/32-installation.enabler/: installation.md
spx/13-test-infrastructure.enabler/21-python-code-quality.enabler/: python-code-quality.md
spx/15-validation.enabler/: validation.md
spx/15-validation.enabler/32-plugin-manifest.enabler/: plugin-manifest.md
spx/15-validation.enabler/32-skill-frontmatter.enabler/: 15-field-extraction.adr.md  15-frontmatter-validation.adr.md  skill-frontmatter.md
spx/15-validation.enabler/32-xml-spacing.enabler/: ISSUES.md  xml-spacing.md
spx/15-validation.enabler/32-xml-spacing.outcome/: xml-spacing.md
spx/15-validation.enabler/tests/: test_validate_plugins_unit.py  test_validation_unit.py
spx/18-plugin-build.enabler/: 15-build-architecture.adr.md  ISSUES.md  PLAN.md  plugin-build.md
spx/18-plugin-build.enabler/21-source-and-templating.enabler/: source-and-templating.md
spx/18-plugin-build.enabler/43-target-emission.enabler/: target-emission.md
spx/18-plugin-build.enabler/65-build-orchestration.enabler/: build-orchestration.md
spx/18-plugin-build.enabler/tests/: test_plugin_build.compliance.l1.py  test_plugin_build.property.l1.py
spx/21-spec-tree.enabler/: ISSUES.md  spec-tree.md
spx/21-spec-tree.enabler/13-agent-environment.enabler/: agent-environment.md
spx/21-spec-tree.enabler/15-context-loading.enabler/: context-loading.md
spx/21-spec-tree.enabler/15-context-loading.outcome/: context-loading.md
spx/21-spec-tree.enabler/21-templates.enabler/: templates.md
spx/21-spec-tree.enabler/32-decisions.enabler/: decisions.md
spx/21-spec-tree.enabler/32-evidence.enabler/: evidence.md
spx/21-spec-tree.enabler/43-update-spx.enabler/: PLAN.md  update-spx.md
spx/21-spec-tree.enabler/43-update-spx.outcome/: PLAN.md  update-spx.md
spx/21-spec-tree.enabler/54-aligning.enabler/: aligning.md
spx/21-spec-tree.enabler/54-aligning.outcome/: aligning.md
spx/21-spec-tree.enabler/54-authoring.enabler/: authoring.md
spx/21-spec-tree.enabler/54-authoring.outcome/: authoring.md
spx/21-spec-tree.enabler/54-bootstrapping.enabler/: bootstrapping.md
spx/21-spec-tree.enabler/54-bootstrapping.outcome/: bootstrapping.md
spx/32-distribution.enabler/: distribution.md
spx/43-claude-meta.enabler/: claude-meta.md
spx/43-develop.enabler/: PLAN.md  develop.md
spx/43-frontend.enabler/: frontend.md
spx/43-hdl.enabler/: hdl.md
spx/43-legacy.enabler/: legacy.md
spx/43-prose.enabler/: prose.md
spx/43-python.enabler/: PLAN.md  python.md
spx/43-typescript.enabler/: PLAN.md  typescript.md
spx/43-visual.enabler/: visual.md
spx/local/: committing-changes.md
tests/unit/: test_distribute_skills.py  test_fix_xml_spacing.py
(+187 files in other folders)
