[project]
name = "outcomeeng-claude"
version = "0.1.0"
description = "Outcome Engineering plugin marketplace for Claude Code"
requires-python = ">=3.14"

[dependency-groups]
dev = [
  "hypothesis>=6.0",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pyyaml>=6.0",
  "tomlkit>=0.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["outcomeeng"]

[tool.uv]
python-preference = "only-managed"

[tool.pytest.ini_options]
testpaths = ["spx", "tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --import-mode=importlib --ignore=spx/21-spec-tree.enabler/15-context-loading.outcome/ --ignore=spx/21-spec-tree.enabler/21-templates.enabler/ --ignore=spx/21-spec-tree.enabler/32-decisions.enabler/32-pdr-auditing.outcome/ --ignore=spx/21-spec-tree.enabler/32-evidence.enabler/32-test-auditing.outcome/ --ignore=spx/21-spec-tree.enabler/43-update-spx.outcome/ --ignore=spx/21-spec-tree.enabler/54-authoring.outcome/ --ignore=spx/21-spec-tree.enabler/54-decomposing.outcome/ --ignore=spx/21-spec-tree.enabler/54-aligning.outcome/ --ignore=spx/21-spec-tree.enabler/54-refactoring.outcome/ --ignore=spx/21-spec-tree.enabler/54-bootstrapping.outcome/ --ignore=spx/21-spec-tree.enabler/65-applying.outcome/ --ignore=spx/21-spec-tree.enabler/65-committing.outcome/ --ignore=spx/21-spec-tree.enabler/76-sessions.outcome/"
pythonpath = ["."]

[tool.mypy]
exclude = [
  "^spx/21\\-spec\\-tree\\.enabler/15\\-context\\-loading\\.outcome/",
  "^spx/21\\-spec\\-tree\\.enabler/21\\-templates\\.enabler/",
  "^spx/21\\-spec\\-tree\\.enabler/32\\-decisions\\.enabler/32\\-pdr\\-auditing\\.outcome/",
  "^spx/21\\-spec\\-tree\\.enabler/32\\-evidence\\.enabler/32\\-test\\-auditing\\.outcome/",
  "^spx/21\\-spec\\-tree\\.enabler/43\\-update\\-spx\\.outcome/",
  "^spx/21\\-spec\\-tree\\.enabler/54\\-authoring\\.outcome/",
  "^spx/21\\-spec\\-tree\\.enabler/54\\-decomposing\\.outcome/",
  "^spx/21\\-spec\\-tree\\.enabler/54\\-aligning\\.outcome/",
  "^spx/21\\-spec\\-tree\\.enabler/54\\-refactoring\\.outcome/",
  "^spx/21\\-spec\\-tree\\.enabler/54\\-bootstrapping\\.outcome/",
  "^spx/21\\-spec\\-tree\\.enabler/65\\-applying\\.outcome/",
  "^spx/21\\-spec\\-tree\\.enabler/65\\-committing\\.outcome/",
  "^spx/21\\-spec\\-tree\\.enabler/76\\-sessions\\.outcome/",
]

[tool.pyright]
exclude = [
  "spx/21-spec-tree.enabler/15-context-loading.outcome/",
  "spx/21-spec-tree.enabler/21-templates.enabler/",
  "spx/21-spec-tree.enabler/32-decisions.enabler/32-pdr-auditing.outcome/",
  "spx/21-spec-tree.enabler/32-evidence.enabler/32-test-auditing.outcome/",
  "spx/21-spec-tree.enabler/43-update-spx.outcome/",
  "spx/21-spec-tree.enabler/54-authoring.outcome/",
  "spx/21-spec-tree.enabler/54-decomposing.outcome/",
  "spx/21-spec-tree.enabler/54-aligning.outcome/",
  "spx/21-spec-tree.enabler/54-refactoring.outcome/",
  "spx/21-spec-tree.enabler/54-bootstrapping.outcome/",
  "spx/21-spec-tree.enabler/65-applying.outcome/",
  "spx/21-spec-tree.enabler/65-committing.outcome/",
  "spx/21-spec-tree.enabler/76-sessions.outcome/",
]
