[project]
name = "outcomeeng-plugins"
version = "0.1.0"
description = "Outcome Engineering plugin marketplace for Codex and Claude Code"
requires-python = ">=3.14"

[dependency-groups]
dev = [
  "hypothesis>=6.0",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["outcomeeng"]

[tool.uv]
python-preference = "only-managed"

[tool.pytest.ini_options]
testpaths = ["spx", "tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --import-mode=importlib"
pythonpath = ["."]

[tool.mypy]

[tool.pyright]
